test/parsing/errors/bisonSyntaxErrorNoToken.compopts
--detailed-errors # bisonSyntaxErrorNoToken-detailed.good
--no-detailed-errors # bisonSyntaxErrorNoToken-brief.good
